--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/BTAssetsRechargeVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/BTAssetsRechargeVC.xib
@@ -9,6 +9,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BTAssetsRechargeVC">
             <connections>
+                <outlet property="address" destination="OFe-ng-ToD" id="Pgz-Zk-Di5"/>
+                <outlet property="addressCode" destination="S1W-yT-KtM" id="ei2-Ra-f33"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -30,13 +32,13 @@
                     <rect key="frame" x="27" y="233" width="360" height="430"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ub05FfBa57ksdjbH0nlkdsjfls934nHU98jokFdjc34mjjuawbv" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OFe-ng-ToD">
-                    <rect key="frame" x="61" y="614" width="292" height="29"/>
+                    <rect key="frame" x="61" y="609" width="292" height="29"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" red="0.20392156862745098" green="0.20392156862745098" blue="0.20392156862745098" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="收款地址" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W9K-hW-SHz">
-                    <rect key="frame" x="182" y="590" width="50" height="12"/>
+                    <rect key="frame" x="182" y="585" width="50" height="12"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="12" id="64Q-8s-M0A"/>
                     </constraints>
@@ -53,22 +55,34 @@
                         <constraint firstAttribute="height" constant="150" id="to6-VV-mfa"/>
                     </constraints>
                 </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GPI-Va-k74">
+                    <rect key="frame" x="199.5" y="640" width="15" height="22"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="15" id="qV4-bF-21w"/>
+                    </constraints>
+                    <state key="normal" image="icon_addressCopy"/>
+                    <connections>
+                        <action selector="copyAction:" destination="-1" eventType="touchUpInside" id="cL5-vK-iWm"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.65490196078431373" green="0.52549019607843139" blue="0.34901960784313724" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="OFe-ng-ToD" firstAttribute="leading" secondItem="lzF-bc-uiz" secondAttribute="leading" constant="34" id="3bn-0g-J5l"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="ewt-B9-jJU" secondAttribute="trailing" constant="50" id="BmH-nC-KrV"/>
+                <constraint firstItem="GPI-Va-k74" firstAttribute="top" secondItem="OFe-ng-ToD" secondAttribute="bottom" constant="2" id="Fhr-34-A4d"/>
                 <constraint firstItem="S1W-yT-KtM" firstAttribute="top" secondItem="lzF-bc-uiz" secondAttribute="top" constant="110" id="J7c-kb-RdM"/>
                 <constraint firstItem="OFe-ng-ToD" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="JAM-g7-3uS"/>
                 <constraint firstItem="W9K-hW-SHz" firstAttribute="centerX" secondItem="OFe-ng-ToD" secondAttribute="centerX" id="L8G-gd-Xz1"/>
                 <constraint firstItem="lzF-bc-uiz" firstAttribute="top" secondItem="ewt-B9-jJU" secondAttribute="top" constant="15" id="NxE-4u-7jv"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="lzF-bc-uiz" secondAttribute="trailing" constant="27" id="T7m-yS-FV4"/>
+                <constraint firstItem="GPI-Va-k74" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Y4B-9o-Jyq"/>
                 <constraint firstItem="ewt-B9-jJU" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="ZAV-I6-6GK"/>
                 <constraint firstItem="ewt-B9-jJU" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="50" id="cy9-Wh-GZh"/>
                 <constraint firstItem="lzF-bc-uiz" firstAttribute="bottom" secondItem="ewt-B9-jJU" secondAttribute="bottom" constant="-15" id="g8L-A5-4du"/>
                 <constraint firstItem="lzF-bc-uiz" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="27" id="j0U-da-vlY"/>
                 <constraint firstItem="OFe-ng-ToD" firstAttribute="top" secondItem="W9K-hW-SHz" secondAttribute="bottom" constant="12" id="mZg-Ay-FBu"/>
-                <constraint firstItem="OFe-ng-ToD" firstAttribute="bottom" secondItem="lzF-bc-uiz" secondAttribute="bottom" constant="-20" id="qtT-yY-kZw"/>
+                <constraint firstItem="OFe-ng-ToD" firstAttribute="bottom" secondItem="lzF-bc-uiz" secondAttribute="bottom" constant="-25" id="qtT-yY-kZw"/>
                 <constraint firstItem="S1W-yT-KtM" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="w3a-Wh-RrY"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
@@ -76,6 +90,7 @@
         </view>
     </objects>
     <resources>
+        <image name="icon_addressCopy" width="12" height="12"/>
         <image name="icon_cardBg" width="321" height="430"/>
     </resources>
 </document>
