--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/BTAssetsWithdrawVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/BTAssetsWithdrawVC.xib
@@ -10,10 +10,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BTAssetsWithdrawVC">
             <connections>
                 <outlet property="addressInput" destination="FSe-wv-5qF" id="hjR-Q1-b2x"/>
-                <outlet property="chainsERC" destination="r9P-3b-bhX" id="76J-E0-1Fb"/>
-                <outlet property="chainsTRC" destination="tRs-uH-AYK" id="brW-Af-nw7"/>
                 <outlet property="coinCountInput" destination="baf-dx-27B" id="06p-6i-4RM"/>
                 <outlet property="fee" destination="G6C-06-hq5" id="ZOy-lr-GEQ"/>
+                <outlet property="layout" destination="qzU-dx-WGx" id="2rT-oo-rsV"/>
+                <outlet property="linkHeight" destination="Yrp-pz-R1Z" id="qaS-57-E30"/>
+                <outlet property="linkTypeCollection" destination="rTe-jo-JuW" id="iEa-WX-Zhh"/>
                 <outlet property="tips" destination="P4O-dR-NK7" id="ToC-Ta-30b"/>
                 <outlet property="tradePasswordInput" destination="eNL-9c-ANW" id="73M-tC-0b7"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -39,50 +40,33 @@
                                     <color key="textColor" red="0.20392156862745098" green="0.20392156862745098" blue="0.20392156862745098" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r9P-3b-bhX">
-                                    <rect key="frame" x="8" y="44" width="70" height="25"/>
-                                    <color key="backgroundColor" red="0.65490196078431373" green="0.52549019607843139" blue="0.3529411764705882" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="rTe-jo-JuW">
+                                    <rect key="frame" x="0.0" y="31" width="390" height="54"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="70" id="Lne-OE-MFf"/>
-                                        <constraint firstAttribute="height" constant="25" id="WOr-GF-ZHn"/>
+                                        <constraint firstAttribute="height" constant="54" id="Yrp-pz-R1Z"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                    <state key="normal" title="ERC20">
-                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </state>
-                                    <userDefinedRuntimeAttributes>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                            <real key="value" value="6"/>
-                                        </userDefinedRuntimeAttribute>
-                                    </userDefinedRuntimeAttributes>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tRs-uH-AYK">
-                                    <rect key="frame" x="98" y="44" width="70" height="25"/>
-                                    <color key="backgroundColor" red="0.90980392156862744" green="0.90980392156862744" blue="0.90980392156862744" alpha="1" colorSpace="calibratedRGB"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="25" id="4CE-k8-Fgo"/>
-                                        <constraint firstAttribute="width" constant="70" id="lTj-6w-PL3"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                    <state key="normal" title="TRC20">
-                                        <color key="titleColor" red="0.60392156860000001" green="0.60392156860000001" blue="0.60392156860000001" alpha="1" colorSpace="calibratedRGB"/>
-                                    </state>
-                                    <userDefinedRuntimeAttributes>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                            <real key="value" value="6"/>
-                                        </userDefinedRuntimeAttribute>
-                                    </userDefinedRuntimeAttributes>
-                                </button>
+                                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="qzU-dx-WGx">
+                                        <size key="itemSize" width="128" height="128"/>
+                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    </collectionViewFlowLayout>
+                                    <connections>
+                                        <outlet property="dataSource" destination="-1" id="TKw-Um-F6e"/>
+                                        <outlet property="delegate" destination="-1" id="oLS-vT-tDO"/>
+                                    </connections>
+                                </collectionView>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             <constraints>
-                                <constraint firstItem="tRs-uH-AYK" firstAttribute="centerY" secondItem="r9P-3b-bhX" secondAttribute="centerY" id="D3h-fi-ZWj"/>
-                                <constraint firstItem="r9P-3b-bhX" firstAttribute="top" secondItem="LJD-9i-028" secondAttribute="bottom" constant="13" id="MRl-4D-zN9"/>
+                                <constraint firstAttribute="bottom" secondItem="rTe-jo-JuW" secondAttribute="bottom" id="Oxn-9l-piB"/>
+                                <constraint firstItem="rTe-jo-JuW" firstAttribute="top" secondItem="LJD-9i-028" secondAttribute="bottom" id="Tur-Vl-588"/>
                                 <constraint firstAttribute="height" constant="85" id="VaV-vg-qTi"/>
                                 <constraint firstItem="LJD-9i-028" firstAttribute="top" secondItem="Mcq-d6-exu" secondAttribute="top" constant="19" id="bkd-pT-Zaf"/>
-                                <constraint firstItem="tRs-uH-AYK" firstAttribute="leading" secondItem="r9P-3b-bhX" secondAttribute="trailing" constant="20" id="eg0-oT-8fD"/>
                                 <constraint firstItem="LJD-9i-028" firstAttribute="leading" secondItem="Mcq-d6-exu" secondAttribute="leading" constant="12" id="m35-G8-xZc"/>
-                                <constraint firstItem="r9P-3b-bhX" firstAttribute="leading" secondItem="Mcq-d6-exu" secondAttribute="leading" constant="8" id="npG-ee-grp"/>
+                                <constraint firstAttribute="trailing" secondItem="rTe-jo-JuW" secondAttribute="trailing" id="p8u-rl-6gf"/>
+                                <constraint firstItem="rTe-jo-JuW" firstAttribute="leading" secondItem="Mcq-d6-exu" secondAttribute="leading" id="yRC-Wa-OaU"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -254,20 +238,13 @@
                                 <action selector="confirmAction:" destination="-1" eventType="touchUpInside" id="Bvr-KE-o8H"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P4O-dR-NK7">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="温馨提示：仅支持erc20钱包地址，地址出错将无法找回请认真核对" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P4O-dR-NK7">
                             <rect key="frame" x="50" y="412" width="352" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="5aG-PS-rpx"/>
                             </constraints>
-                            <attributedString key="attributedText">
-                                <fragment content="温馨提示：仅支持erc20钱包地址，地址出错将无法找回请认真核对">
-                                    <attributes>
-                                        <color key="NSColor" red="0.6588235294117647" green="0.52549019607843139" blue="0.3529411764705882" alpha="1" colorSpace="calibratedRGB"/>
-                                        <font key="NSFont" metaFont="system"/>
-                                        <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineSpacing="10" tighteningFactorForTruncation="0.0"/>
-                                    </attributes>
-                                </fragment>
-                            </attributedString>
+                            <fontDescription key="fontDescription" name=".PingFangSC-Regular" family=".AppleSimplifiedChineseFont" pointSize="13"/>
+                            <color key="textColor" red="0.65490196078431373" green="0.52549019607843139" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_tips" translatesAutoresizingMaskIntoConstraints="NO" id="Bo8-n3-fYb">
