--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/View/BTAssetsCell.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/View/BTAssetsCell.xib
@@ -28,7 +28,7 @@
                                 <color key="textColor" red="0.47058823529411764" green="0.38431372549019605" blue="0.21176470588235294" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sab-1W-5qd">
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sab-1W-5qd">
                                 <rect key="frame" x="246" y="12" width="60" height="20"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已激活" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8P1-he-7pK">
@@ -189,7 +189,10 @@
                 <outlet property="activityView" destination="sab-1W-5qd" id="yOb-qh-z1C"/>
                 <outlet property="coinName" destination="Wed-uH-1iW" id="ZuX-Jd-096"/>
                 <outlet property="convertAccount" destination="bTj-rg-Bhr" id="V4j-Qz-11T"/>
+                <outlet property="receiveBtn" destination="Fe1-4A-qdI" id="ZZ8-C5-oM4"/>
+                <outlet property="sTransferBtn" destination="esD-Bn-T39" id="OoM-VU-Auq"/>
                 <outlet property="totalCoinAccount" destination="hHb-Xa-bwW" id="ntW-G0-cPZ"/>
+                <outlet property="transiferBtn" destination="LLP-hH-Hdc" id="RPM-aQ-UqU"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="124.55357142857142"/>
         </tableViewCell>
