--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Home/Base.lproj/BTHomeTransiferCoinVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Home/Base.lproj/BTHomeTransiferCoinVC.xib
@@ -14,7 +14,9 @@
                 <outlet property="balance" destination="QQJ-dV-gwI" id="2RO-BX-WPp"/>
                 <outlet property="coinCountInput" destination="RtI-ep-cXm" id="9is-tL-HIC"/>
                 <outlet property="fee" destination="qGv-5R-DDs" id="IdZ-JO-i20"/>
+                <outlet property="feeTitle" destination="nq1-YA-Mat" id="D8M-8h-pdU"/>
                 <outlet property="tradePasswordInput" destination="udh-aD-gId" id="NbM-lB-uPq"/>
+                <outlet property="unitL" destination="cGd-jk-Kh2" id="bYM-5h-R4E"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -26,8 +28,8 @@
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HNW-0W-apT">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="矿工费：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nq1-YA-Mat">
-                            <rect key="frame" x="344.5" y="223" width="45" height="14"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="矿工费每笔：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nq1-YA-Mat">
+                            <rect key="frame" x="310" y="223" width="67.5" height="14"/>
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="11"/>
                             <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -171,7 +173,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qGv-5R-DDs">
-                            <rect key="frame" x="391.5" y="223.5" width="7.5" height="13.5"/>
+                            <rect key="frame" x="379.5" y="223.5" width="7.5" height="13.5"/>
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="11"/>
                             <color key="textColor" red="0.81960784310000001" green="0.6588235294" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -206,6 +208,12 @@
                                 <action selector="confirmAction:" destination="-1" eventType="touchUpInside" id="9EH-L7-SJD"/>
                             </connections>
                         </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="个" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cGd-jk-Kh2">
+                            <rect key="frame" x="387" y="223" width="12" height="14"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="11"/>
+                            <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <constraints>
                         <constraint firstItem="uDE-FD-pHs" firstAttribute="trailing" secondItem="4kz-XE-yFy" secondAttribute="trailing" id="3jy-PW-8qf"/>
@@ -213,6 +221,7 @@
                         <constraint firstItem="o34-6J-KE4" firstAttribute="centerY" secondItem="nq1-YA-Mat" secondAttribute="centerY" id="90p-34-Ufe"/>
                         <constraint firstItem="4kz-XE-yFy" firstAttribute="top" secondItem="HNW-0W-apT" secondAttribute="top" constant="30" id="ARL-Xv-uYc"/>
                         <constraint firstItem="4kz-XE-yFy" firstAttribute="leading" secondItem="HNW-0W-apT" secondAttribute="leading" constant="12" id="Bjr-6a-61Z"/>
+                        <constraint firstItem="cGd-jk-Kh2" firstAttribute="centerY" secondItem="o34-6J-KE4" secondAttribute="centerY" id="CiT-cc-69h"/>
                         <constraint firstItem="uDE-FD-pHs" firstAttribute="top" secondItem="4kz-XE-yFy" secondAttribute="bottom" constant="10" id="EGz-5G-u5F"/>
                         <constraint firstItem="xNB-g8-WWK" firstAttribute="trailing" secondItem="4kz-XE-yFy" secondAttribute="trailing" id="IMd-9I-0nf"/>
                         <constraint firstItem="qGv-5R-DDs" firstAttribute="leading" secondItem="nq1-YA-Mat" secondAttribute="trailing" constant="2" id="IQk-35-igG"/>
@@ -220,13 +229,14 @@
                         <constraint firstItem="4kz-XE-yFy" firstAttribute="centerX" secondItem="HNW-0W-apT" secondAttribute="centerX" id="XBp-C3-DJ1"/>
                         <constraint firstAttribute="trailing" secondItem="p8l-e9-h1v" secondAttribute="trailing" constant="48" id="bnT-7q-for"/>
                         <constraint firstItem="xNB-g8-WWK" firstAttribute="top" secondItem="nq1-YA-Mat" secondAttribute="bottom" constant="25" id="cL6-BS-kT4"/>
+                        <constraint firstAttribute="trailing" secondItem="cGd-jk-Kh2" secondAttribute="trailing" constant="15" id="cp1-I5-dBT"/>
                         <constraint firstItem="nq1-YA-Mat" firstAttribute="top" secondItem="uDE-FD-pHs" secondAttribute="bottom" constant="13" id="eGq-7r-5oa"/>
                         <constraint firstItem="p8l-e9-h1v" firstAttribute="top" secondItem="xNB-g8-WWK" secondAttribute="bottom" constant="50" id="fya-SG-IMW"/>
                         <constraint firstAttribute="trailing" secondItem="4kz-XE-yFy" secondAttribute="trailing" constant="12" id="gyb-PU-JDd"/>
+                        <constraint firstItem="cGd-jk-Kh2" firstAttribute="leading" secondItem="qGv-5R-DDs" secondAttribute="trailing" id="i6G-KX-oNc"/>
                         <constraint firstItem="uDE-FD-pHs" firstAttribute="leading" secondItem="4kz-XE-yFy" secondAttribute="leading" id="idz-Qq-7E8"/>
                         <constraint firstAttribute="bottom" secondItem="p8l-e9-h1v" secondAttribute="bottom" constant="50" id="iqW-9C-lri"/>
                         <constraint firstItem="QQJ-dV-gwI" firstAttribute="leading" secondItem="o34-6J-KE4" secondAttribute="trailing" constant="2" id="jGB-Vd-9uo"/>
-                        <constraint firstAttribute="trailing" secondItem="qGv-5R-DDs" secondAttribute="trailing" constant="15" id="rPd-XH-esj"/>
                         <constraint firstItem="o34-6J-KE4" firstAttribute="leading" secondItem="HNW-0W-apT" secondAttribute="leading" constant="15" id="vIv-fa-4hb"/>
                         <constraint firstItem="qGv-5R-DDs" firstAttribute="centerY" secondItem="nq1-YA-Mat" secondAttribute="centerY" id="wpL-M3-Jpi"/>
                         <constraint firstItem="p8l-e9-h1v" firstAttribute="leading" secondItem="HNW-0W-apT" secondAttribute="leading" constant="48" id="yob-zL-ePD"/>
